k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: demo
  ports:
  - port: 8080
    targetPort: 8080
